fix alignment of logos

--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -8324,8 +8324,11 @@ img.mfp-img {
     padding-top: 50px;
 }
 #sponsoring .sponsor img{
-    width: 100%;
+    max-width: 100%;
     max-height: 150px;
+}
+#sponsoring .sponsor p{
+    text-align: center;
 }
 
 #sponsoring div.row h3 {
